# RCID

./: .gitignore  CLAUDE.md  EXPERIMENT_GUIDE.md  KLRatio_full_implementation_prompt.md  KLRatio_method_and_theory.md  PADD_implementation_prompt.md  README.md  pyproject.toml  rcid_next_steps.md
.claude/: settings.local.json
configs/: base.yaml  exp1_imprint_extraction.yaml  exp1_mechanism_preservation.yaml  exp2_distillation_comparison.yaml  exp2_full_comparison.yaml  exp2_rcid_comparison.yaml  exp3_multitask.yaml  exp3_robustness_correlation.yaml  exp4_information_purity.yaml  exp5_cross_architecture.yaml  exp_leakage_test.yaml  large_scale.yaml  llama3.yaml  master.yaml  qwen3.yaml
notebooks/: analyze_results.ipynb  visualize_imprints.ipynb
scripts/: align_spaces.py  common.py  diagnose_saliency.py  eval_benchmarks.py  eval_only.sh  evaluate.py  extract_imprints.py  generate_contrastive_pairs.py  overfit_test.py  pilot_validation.py  plot_paper_figures.py  precompute_teacher_saliency.py  run_all.py  run_all_experiments.sh  run_exp1.py  run_exp2.py  run_exp3.py  run_exp4.py  run_exp5_cross_arch.py  run_full_experiment.py  run_large_scale_distill.py  run_padd_distill.py  run_padd_phase1.sh  run_paper_experiments.py  run_phase2.sh  run_phase2_experiments.py  train.py  visualize_imprints.py
tests/: conftest.py  test_adaptive_kl.py  test_alignment.py  test_causal_consistency.py  test_circuit.py  test_cka.py  test_data.py  test_distillation.py  test_docstring_data.py  test_eval.py  test_induction_data.py  test_informed_fitnets.py  test_integration.py  test_large_scale.py  test_leakage.py  test_minilm_baseline.py  test_models.py  test_ocid.py  test_ood_robustness.py  test_padd.py  test_patching.py  test_procrustes.py  test_rcid_loss.py  test_saliency.py  test_sva_data.py  (+2 more)
(+59 files in other folders)
