[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rcid"
version = "0.1.0"
description = "Residual Causal Imprint Distillation — Beyond Component Mapping: Distilling Circuit Knowledge via Residual Stream Causal Imprints"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "transformers>=4.36",
    "datasets>=2.16",
    "omegaconf>=2.3",
    "wandb>=0.16",
    "einops>=0.7",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pytest>=7.4",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["ruff", "mypy", "ipykernel"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
